# src/entities/user-config/index.ts
@@ -1,0 +1,9 @@
+export {
+  userConfigKeys,
+  fetchUserConfig,
+  prefetchUserConfig,
+  useUserConfigQuery,
+  useUpdateUserConfigMutation,
+} from './model/api'
+
+export type { UserConfig, UpdateUserConfigDto } from './model/types'
